--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<iframe src="./CV_Liuyi_Guo.pdf" width="100% height=100%">
-</iframe>
+<a href="username.github.io/CV/CV_Liuyi_Guo.pdf" target="_blank">PDF.</a>
