--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/LiuyiGuo/CV/raw/main/CV_Liuyi_Guo.pdf" target="_blank">PDF.</a>
+<embed src="https://github.com/LiuyiGuo/CV/raw/main/CV_Liuyi_Guo.pdf" type="application/pdf" />
